【修复】超长url优化
